--- a/teaming/index.html
+++ b/teaming/index.html
@@ -35,7 +35,7 @@
             <ul>
               <li><i><b>Technical Lead: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
-              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta</i></li>
+              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, Sai Teja Paladi, Michael Widener, Aniket Gupta, Rohit Sharma, Owen Bond, Ronak Shah, Austin Hetherington</i></li>
             <li>
               <i><b>External Collaborators: </b>
                 <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>, 
