--- a/teaming/index.html
+++ b/teaming/index.html
@@ -35,7 +35,10 @@
             <ul>
               <li><i><b>Technical Lead: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
-              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, Sai Teja Paladi, Michael Widener, Aniket Gupta, Rohit Sharma, Owen Bond, Ronak Shah, 
+              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, 
+                <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>, 
+                Michael Widener, Aniket Gupta, Rohit Sharma, 
+                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>, Ronak Shah, 
                 <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin Hetherington</a>
               </i>
             </li>
