--- a/teaming/index.html
+++ b/teaming/index.html
@@ -30,59 +30,66 @@
           </h2>
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> -
             <span style="color:red; font-weight:bold;">Click <u><a target="_black"
-                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is being collected! [IRB# Pro00127449.]</span><br>
+                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is
+              being collected! [IRB# Pro00127449.]</span><br>
             <hr>
-            <ul>
-              <li><i><b>Technical Lead: </b><a target="_blank"
-                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
-              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, 
-                <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>, 
-                Michael Widener, Aniket Gupta, Rohit Sharma, 
-                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>, Ronak Shah, 
-                <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin Hetherington</a>
+          <ul>
+            <li><i><b>Technical Lead: </b><a target="_blank"
+                  href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
+            <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru,
+                <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
+                Michael Widener, Aniket Gupta, Rohit Sharma,
+                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
+                https://www.researchgate.net/profile/Ronak_Shah9
+                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Ronak Shah</a>,
+                <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
+                  Hetherington</a>
               </i>
             </li>
             <li>
               <i><b>External Collaborators: </b>
-                <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>, 
-                <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>, 
-                <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>, 
+                <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
+                <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
+                <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
                 <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
               </i>
             </li>
             <li><i><b>Advisors: </b><a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
-                Matthews</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
-                Ziehl</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
-                Huhns</a>, <a target="_blank"
-                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
-                McElwain</a></i></li>
-          </ul>  
-            We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
-            from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
-            assisting team formation when
-            researchers respond to calls for proposals from funding agencies. This is an instance of the general problem
-            of building teams when demand opportunities come periodically and potential members may vary over time. The
-            novelties of our approach are that we: (a) extract technical skills needed about researchers and calls from
-            multiple data sources and normalize them using Natural Language Processing (NLP) techniques, (b) build a
-            prototype solution based on matching and teaming based on constraints, (c) describe initial feedback about
-            system from researchers at a University to deploy, and (d) create and publish a dataset that others can use.
+                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
+                  Matthews</a>, <a target="_blank"
+                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
+                  Ziehl</a>, <a target="_blank"
+                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+                  Huhns</a>, <a target="_blank"
+                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
+                  McElwain</a></i></li>
+          </ul>
+          We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
+          from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
+          assisting team formation when
+          researchers respond to calls for proposals from funding agencies. This is an instance of the general problem
+          of building teams when demand opportunities come periodically and potential members may vary over time. The
+          novelties of our approach are that we: (a) extract technical skills needed about researchers and calls from
+          multiple data sources and normalize them using Natural Language Processing (NLP) techniques, (b) build a
+          prototype solution based on matching and teaming based on constraints, (c) describe initial feedback about
+          system from researchers at a University to deploy, and (d) create and publish a dataset that others can use.
           </p>
           <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3)
             and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
-          
-          
+
+
           <hr>
 
           <p><i><b>Representative Publications</b></i></p>
           <ul>
-            <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals
+            <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call
+              for Proposals
               <br><i>arxiv Preprint</i><br>
 
-              <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b> 
-              <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b> 
+              <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
+                  href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b>
+              <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a
+                  href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b>
               <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper]</b></a>
               <a href="./bib/ultra-2.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
