--- a/teaming/index.html
+++ b/teaming/index.html
@@ -38,7 +38,7 @@
                   href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
             <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru,
                 <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
-                Michael Widener, Aniket Gupta, Rohit Sharma,
+                Michael Widener, Rohit Sharma,
                 <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
                 https://www.researchgate.net/profile/Ronak_Shah9
                 <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Ronak Shah</a>,
@@ -48,6 +48,7 @@
             </li>
             <li>
               <i><b>External Collaborators: </b>
+                <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
                 <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
                 <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
                 <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
