--- a/teaming/index.html
+++ b/teaming/index.html
@@ -40,8 +40,7 @@
                 <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
                 Michael Widener, Rohit Sharma,
                 <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
-                https://www.researchgate.net/profile/Ronak_Shah9
-                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Ronak Shah</a>,
+                <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
                 <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
                   Hetherington</a>
               </i>
