--- a/rating_page/index.html
+++ b/rating_page/index.html
@@ -36,7 +36,7 @@
                   <p style="text-align: justify;"><span style="background-color: hsl(37, 100%, 70%);"><b></b></span><br>
                       <i><b>Collaborators: </b>AIISC - University of South Carolina</i>
                       <br>
-                      <i><b>Authors: </b>Kausik Lakkaraju</i>
+                      <i><b>Contributors: </b>Kausik Lakkaraju</i>
                       <br>
                     </p>
                     <p style="text-align: justify;">
@@ -65,7 +65,7 @@
                 <p style="text-align: justify;"><span style="background-color: hsl(37, 100%, 70%);"><b>Advances in Automatically Rating the Trustworthiness of Text Processing Services</b></span><br>
                   <i><b>Collaborators: </b>AIISC, Department of Computer Science and Engineering - University of South Carolina, IBM Research</i>
                   <br>
-                  <i><b>Authors: </b>Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta</i>
+                  <i><b>Contributors: </b>Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta</i>
                   <br>
               </p>
               <p style="text-align: justify;">
