--- a/teaming/index.html
+++ b/teaming/index.html
@@ -36,7 +36,8 @@
           <ul>
             <li><i><b>Technical Lead: </b><a target="_blank"
                   href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
-            <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru,
+            <li><i><b>Collaborators over the years: </b>
+                <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
                 <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
                 Michael Widener, Rohit Sharma,
                 <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
