--- a/_pages/papers.html
+++ b/_pages/papers.html
@@ -44,12 +44,26 @@ author_profile: true
       </a></li>
     <li><a style="text-decoration: none;color: black;">
         <h3><span style="color:black">2023-4</span></h3>
-        <span>Lakkaraju, Kausik, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath Muppasani, and Biplav Srivastava.
+        <span>Kausik Lakkaraju, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath Muppasani, and Biplav Srivastava.
           "Can LLMs be Good Financial Advisors?: An Initial Study in Personal Decision Making for Optimized Outcomes."
           FinPlan 2023: 51, On Arxiv at: <a href="https://arxiv.org/abs/2307.07422">https://arxiv.org/abs/2307.07422</a>
           [LLM, Chatbot, Personal Finance] - <a href="https://arxiv.org/abs/2307.07422">[PDF]</a></span>
       </a></li>
-
+    <li><a style="text-decoration: none;color: black;">
+        <h3><span style="color:black">2023-5</span></h3>
+        <span>Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, and Sriraam Natarajan.
+          (Deployed Application) Promoting Research Collaboration with Open Data Driven Team Recommendation in Response
+          to Call for Proposals.
+          <i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (IAAI-24)</i>, On
+          Arxiv at: <a href="https://arxiv.org/abs/2309.09404">https://arxiv.org/abs/2309.09404</a><br>
+          <b>[AI Teaming]</b> -
+          [Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>,
+            <a href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]
+          [Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>,
+            <a href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]
+          <a href="https://arxiv.org/abs/2309.09404" target="_blank">[PDF]</a>
+          <a href="./bib/ultra-2.txt" target="_blank" type="text/plain">[BibTex]</a>
+      </a></li>
     <li><a style="text-decoration: none;color: black;">
         <h3><span style="color:black">2022-1</span></h3>
         <span>Kausik Lakkaraju, Vinamra Palaiyya, Sai Teja Paladi, Chinmayi Appajigowda, Biplav Srivastava, Lokesh
