--- a/teaming/index.html
+++ b/teaming/index.html
@@ -85,7 +85,7 @@
           <ul>
             <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call
               for Proposals
-              <br><i>arxiv Preprint</i><br>
+              <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (IAAI-24)</i><br>
 
               <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
                   href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b>
