--- a/teaming/index.html
+++ b/teaming/index.html
@@ -33,6 +33,10 @@
                   href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is
               being collected! [IRB# Pro00127449.]</span><br>
             <hr>
+          <p><mark style="color:red;"><b>NEW!</b></mark> Our paper that presents a novel system to recommend teams using
+            a variety of AI methods has been accepted to <a
+              href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
+              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a>.</p>
           <ul>
             <li><i><b>Technical Lead: </b><a target="_blank"
                   href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
@@ -85,7 +89,8 @@
           <ul>
             <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call
               for Proposals
-              <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (IAAI-24)</i><br>
+              <br><i>The Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence
+                (IAAI-24)</i><br>
 
               <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a
                   href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b>
