--- a/teaming/index.html
+++ b/teaming/index.html
@@ -33,7 +33,7 @@
                   href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is
               being collected! [IRB# Pro00127449.]</span><br>
             <hr>
-          <p><mark style="color:red;"><b>NEW!</b></mark> Our paper that presents a novel system to recommend teams using
+          <p><mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://ai4society.github.io/teaming/#:~:text=%5B2023%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a> that presents a novel system to recommend teams using
             a variety of AI methods has been accepted to <a
               href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
               style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a>.</p>
@@ -69,6 +69,7 @@
                   href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
                   McElwain</a></i></li>
           </ul>
+
           We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
           from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
           assisting team formation when
