--- a/teaming/index.html
+++ b/teaming/index.html
@@ -115,6 +115,11 @@
             <center>
               <div class="slide-container">
                 <div class="slide fade">
+                  <img src='images/group_recommendation.jpg' alt='' height="550px">
+                  <figcaption>The underlying  research directions and  applications are summarized in the poster.
+                  </figcaption>
+                </div>
+                <div class="slide fade">
                   <img src='images/ultra_poster.png' alt='' height="550px">
                   <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
                     <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).
