--- a/teaming/index.html
+++ b/teaming/index.html
@@ -73,15 +73,16 @@
                   McElwain</a></i></li>
           </ul>
 
-          <p align="justify">We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
-            from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
+          <p align="justify">We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
+            <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based prototype for
             assisting team formation when researchers respond to calls for proposals from funding agencies. This is an
             instance of the general problem of building teams when demand opportunities come periodically and potential
             members may vary over time. The novelties of our approach are that we: (a) extract technical skills needed
-            about researchers and calls from multiple data sources and normalize them using Natural Language Processing
-            (NLP) techniques, (b) build a prototype solution based on matching and teaming based on constraints, (c)
-            describe initial feedback about system from researchers at a University to deploy, and (d) create and
-            publish a dataset that others can use.</p>
+            about researchers and calls from multiple <i>open</i> data sources and normalize them using NLP techniques,
+            (b) build a prototype solution based on matching and teaming based on constraints, (c) describe initial
+            feedback about system from researchers at a University to deploy, and (d) create and publish a dataset that
+            others can use.<br>
+          </p>
           <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3)
             and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
           <span style="color:red; font-weight:bold;">Click <u><a target="_black"
