--- a/teaming/index.html
+++ b/teaming/index.html
@@ -39,57 +39,38 @@
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Group Recommendation and
                 Fairness</b></span>
 
-          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Formation</b></span>
-          <ul>
-            <li><i><b>Technical Lead: </b><a target="_blank"
-                  href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
-            <li><i><b>Collaborators over the years: </b>
-                <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
-                <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
-                Michael Widener, Rohit Sharma,
-                <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
-                <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
-                <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
-                  Hetherington</a>
-              </i>
-            </li>
-            <li>
-              <i><b>External Collaborators: </b>
-                <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
-                <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
-                <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
-                <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
-                <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
-              </i>
-            </li>
-            <li><i><b>Advisors: </b><a target="_blank"
-                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
-                  Matthews</a>, <a target="_blank"
-                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
-                  Ziehl</a>, <a target="_blank"
-                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
-                  Huhns</a>, <a target="_blank"
-                  href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
-                  McElwain</a></i></li>
-          </ul>
+          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Formation</b></span><br>
+            <i><b>Technical Lead: </b><a target="_blank"
+                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i><br>
+            <i><b>Collaborators over the years: </b>
+              <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
+              <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
+              Michael Widener, Rohit Sharma,
+              <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
+              <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
+              <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
+                Hetherington</a>
+            </i><br>
+            <i><b>External Collaborators: </b>
+              <a target="_blank" href="https://aniketgupta01.wordpress.com/">Aniket Gupta</a>,
+              <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>,
+              <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>,
+              <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>,
+              <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
+            </i><br>
+            <i><b>Advisors: </b><a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
+                Matthews</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
+                Ziehl</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+                Huhns</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
+                McElwain</a></i><br>
 
           <p align="justify">We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
-            <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based prototype for
-            assisting team formation when researchers respond to calls for proposals from funding agencies. This is an
-            instance of the general problem of building teams when demand opportunities come periodically and potential
-            members may vary over time. The novelties of our approach are that we: (a) extract technical skills needed
-            about researchers and calls from multiple <i>open</i> data sources and normalize them using NLP techniques,
-            (b) build a prototype solution based on matching and teaming based on constraints, (c) describe initial
-            feedback about system from researchers at a University to deploy, and (d) create and publish a dataset that
-            others can use.<br>
+            <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for assisting team formation when researchers respond to calls for proposals from funding agencies. This is an instance of the general problem of building teams when demand opportunities come periodically and potential members may vary over time. The novelties of our approach are that we: (a) extract technical skills needed about researchers and calls from multiple <i>open</i> data sources and normalize them using NLP techniques, (b) build a prototype solution based on matching and teaming based on constraints, (c) evaluate our system in two diverse settings in US and India to establish generality of our approach, and (d) create and publish a dataset that others can use.<br> <span style="color:violet"><i>(This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3) and 45 CFR  46.111(a)(7) by University of South Carolina IRB# Pro00127449.)</i></span>
           </p>
-          <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3)
-            and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
-          <span style="color:red; font-weight:bold;">Click <u><a target="_black"
-                href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is
-            being collected! [IRB# Pro00127449.]</span><br>
-
-          <hr>
 
           <p><i><b>Representative Publications</b></i></p>
           <ul>
@@ -104,14 +85,21 @@
                   href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b>
               <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper]</b></a>
               <a href="./bib/ultra-2.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-              <br>
+              <br><br>
+              <div class="video-container" style="display: flex; justify-content: center;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8MUtxsfVNIU"
+                  title="Demo of ULTRA Tool: Team Recommendation for Researchers for Responding to Calls for Proposals"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
+              </div>
             </li>
             <br>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
               <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
 
-              <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Website]</b></a>
-              <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank"><b>[Demo Video]</b></a>
+              <!--<a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Website]</b></a>-->
+              <!--<a href="https://youtu.be/8MUtxsfVNIU/" target="_blank"><b>[Demo Video]</b></a>-->
               <a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
               <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
@@ -119,11 +107,6 @@
             <br>
             <center>
               <div class="slide-container">
-                <div class="slide fade">
-                  <img src='images/group_recommendation.jpg' alt='' height="700px">
-                  <figcaption>The underlying research directions and applications are summarized in the poster.
-                  </figcaption>
-                </div>
                 <div class="slide fade">
                   <img src='images/ultra_poster.png' alt='' height="700px">
                   <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
@@ -145,7 +128,6 @@
                 <a href="#" class="next" title="Next">&#10095</a>
               </div>
               <div class="dots-container">
-                <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
