--- a/teaming/index.html
+++ b/teaming/index.html
@@ -37,7 +37,15 @@
               Application</i> award.</p>
 
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Group Recommendation and
-                Fairness</b></span>
+                Fairness</b></span><br>
+            <i><b>Authors: </b>Biplav Srivastava, Siva Likitha Valluru, Michael Huhns, Sriraam Natarajan</i>
+            <br><br>
+            We study the problem of group recommendation, an information exploration paradigm that retrieves interesting
+            items for users based on their profiles and past interactions/activities/history. Existing literature
+            encourages using greedy methods, genetic and heuristic algorithms, topic diversification, and cost
+            constraint bi-objective optimizations. Our objective is to build novel methods and useful tools for group
+            recommendation with fairness, and drive different use cases (e.g., meal recommendation).
+          </p>
 
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Formation</b></span><br>
             <i><b>Technical Lead: </b><a target="_blank"
