add group recommendation

--- a/teaming/index.html
+++ b/teaming/index.html
@@ -41,12 +41,14 @@
             <br>
           </p>
           <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg" alt="Group Recommendation"
-              style="width:100%;max-width:50px">We study the problem of group recommendation, an information exploration
+              style="width:100%;max-width:80px">We study the problem of group recommendation, an information exploration
             paradigm that retrieves interesting items for users based on their profiles and past
             interactions/activities/history. Existing literature encourages using greedy methods, genetic and heuristic
             algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to build
             novel methods and useful tools for group recommendation with fairness, and drive different use cases (e.g.,
-            meal recommendation).</p>
+            meal recommendation). <br><br>
+            <span style="color:violet"><i>The underlying research directions and applications are summarized in the poster to the right.</i></span>
+          </p>
 
           <!-- The Modal -->
           <div id="myModal" class="modal">
