--- a/teaming/index.html
+++ b/teaming/index.html
@@ -47,7 +47,7 @@
             algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to build
             novel methods and useful tools for group recommendation with fairness, and drive different use cases (e.g.,
             meal recommendation). <br><br>
-            <span style="color:violet"><i>The underlying research directions and applications are summarized in the poster to the right.</i></span>
+            <span style="color:violet"><i>The underlying research directions and applications are summarized in the poster to the right (can be enlarged).</i></span>
           </p>
 
           <!-- The Modal -->
