--- a/teaming/index.html
+++ b/teaming/index.html
@@ -40,14 +40,15 @@
             <i><b>Authors: </b>Biplav Srivastava, Siva Likitha Valluru, Michael Huhns, Sriraam Natarajan</i>
             <br>
           </p>
-          <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg" alt="Group Recommendation"
+          <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg" alt="Group Recommendation - Research Potential, Methods, and Fairness"
               style="width:100%;max-width:80px">We study the problem of group recommendation, an information exploration
             paradigm that retrieves interesting items for users based on their profiles and past
             interactions/activities/history. Existing literature encourages using greedy methods, genetic and heuristic
             algorithms, topic diversification, and cost constraint bi-objective optimizations. Our objective is to build
             novel methods and useful tools for group recommendation with fairness, and drive different use cases (e.g.,
             meal recommendation). <br><br>
-            <span style="color:violet"><i>The underlying research directions and applications are summarized in the poster to the right (can be enlarged).</i></span>
+            <span style="color:violet"><i>The underlying research directions and applications are summarized in the
+                poster to the right (can be enlarged).</i></span>
           </p>
 
           <!-- The Modal -->
