--- a/teaming/index.html
+++ b/teaming/index.html
@@ -40,7 +40,8 @@
             <i><b>Authors: </b>Biplav Srivastava, Siva Likitha Valluru, Michael Huhns, Sriraam Natarajan</i>
             <br>
           </p>
-          <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg" alt="Group Recommendation - Research Potential, Methods, and Fairness"
+          <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg"
+              alt="Group Recommendation - Research Potential, Methods, and Fairness"
               style="width:100%;max-width:80px">We study the problem of group recommendation, an information exploration
             paradigm that retrieves interesting items for users based on their profiles and past
             interactions/activities/history. Existing literature encourages using greedy methods, genetic and heuristic
@@ -80,6 +81,8 @@
               modal.style.display = "none";
             }
           </script>
+
+          <hr>
 
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Formation</b></span><br>
             <i><b>Technical Lead: </b><a target="_blank"
