--- a/teaming/index.html
+++ b/teaming/index.html
@@ -37,7 +37,10 @@
 
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Group Recommendation and
                 Fairness</b></span><br>
-            <i><b>Authors: </b>Biplav Srivastava, Siva Likitha Valluru, Michael Huhns, Sriraam Natarajan</i>
+            <i><b>Authors: </b><a target="_blank"
+              href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a target="_blank"
+              href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+              Huhns</a>, <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a></i>
             <br>
           </p>
           <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg"
@@ -113,17 +116,16 @@
                 href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
                 McElwain</a></i><br>
 
-          <p align="justify">We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
+          <p align="justify"><img id="myImg" src="../images/group-reco-ultra.jpg"
+              alt="Group Recommendation - Research Potential, Methods, and Fairness"
+              style="width:100%;max-width:80px;max-height:200px;">We introduce ULTRA (<b><u>U</u></b>niversity
+            <b><u>L</u></b>ead <b><u>T</u></b>eam
             <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an novel AI-based system for
-            assisting team formation when researchers respond to calls for proposals from funding agencies. This is an
-            instance of the general problem of building teams when demand opportunities come periodically and potential
-            members may vary over time. The novelties of our approach are that we: (a) extract technical skills needed
-            about researchers and calls from multiple <i>open</i> data sources and normalize them using NLP techniques,
-            (b) build a prototype solution based on matching and teaming based on constraints, (c) evaluate our system
-            in two diverse settings in US and India to establish generality of our approach, and (d) create and publish
-            a dataset that others can use.<br> <span style="color:violet"><i>(This research study has been certified as
-                exempt from the IRB per 45 CFR 46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina IRB#
-                Pro00127449.)</i></span>
+            assisting team formation when researchers respond to RFPs from funding agencies. This is an instance of the
+            general problem of building teams when demand opportunities come periodically and potential members may vary
+            over time. The novelties of our approach are that we: (a) extract technical skills needed about researchers
+            and calls from multiple <i>open</i> data sources and normalize them using NLP techniques, (b) build teaming
+            solutions based on constraints, (c) computationally and qualitatively evaluate our system in two diverse settings (US, India) to establish generality of our approach, and (d) create and  publish a dataset that others can use.<br><br> <span style="color:violet"><i>(This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina IRB#Pro00127449.)</i></span>
           </p>
 
           <p><i><b>Representative Publications</b></i></p>
