--- a/teaming/index.html
+++ b/teaming/index.html
@@ -93,7 +93,7 @@
             <i><b>Collaborators over the years: </b>
               <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>,
               <a target="_blank" href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/">Sai Teja Paladi</a>,
-              Michael Widener, Rohit Sharma,
+              <a target="_blank" href="https://www.linkedin.com/in/m-xander-widener/">Michael Widener</a>, Rohit Sharma,
               <a target="_blank" href="https://www.linkedin.com/in/owen-bond-0a146a20b/">Owen Bond</a>,
               <a target="_blank" href="https://www.researchgate.net/profile/Ronak_Shah9">Ronak Shah</a>,
               <a target="_blank" href="https://www.linkedin.com/in/austin-hetherington-503a32203/">Austin
